--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
                     Acesse o blog <strong class="strong-adverising">“uma noivinha aniosa”</strong> para tirar suas dúvidas sobre casamento e conheça outras noivas.
                 </p>
                 <img src="/assets/imgs/noivinha.png" alt="Uma Noivinha Ansiosa Logo">
-                <button class="advertising-btn"><a href="#">acesse aqui</a></button>
+                <button class="advertising-btn"><a href="/">acesse aqui</a></button>
         </aside>
     </main>
     <footer>
-        <p>site desenvolvido por <a href="https://github.com/ma-vick" target="_blank">Victória Almeida</a href=""> como atividade para o curso Jovem Programadora</p>
+        <p>site desenvolvido por <a href="https://github.com/ma-vick" target="_blank">Victória Almeida</a> como atividade para o curso Jovem Programadora</p>
     </footer>
 </body>
 </html>
