--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
         <a href="#"><img src="/assets/imgs/heart.png" alt="Coração" class="logo"></a>
         <a href="https://github.com/ma-vick" target="_blank"><img src="/assets/imgs/github.png" alt="Github Logo" class="github-logo"></a>
     </header>
+    <nav class="nav-bar">
+        <ul>
+            <li>home</li>
+            <li>about</li>
+            <li>contact us</li>
+        </ul>
+    </nav>
     <main>
         <nav class="summary">
             <h2>sumário</h2>
