--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>website layout</title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="shortcut icon" href="/assets/imgs/heart.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/imgs/heart.png" type="image/x-icon">
 </head>
 <body>
     <header>
